daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N18_bad_review_receipt/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840d199f78165c3d8a8d8fbd72e65261b55b7a9b8ff0f98f5af36bd31b85eb0cd0cf9e354c2bae638f9e4ebcda5681f974706a12517134902224051a5ec7d4264b9
